{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Ship",
            "id": "2f1c112b-d828-4ee3-9f68-72db5af33cda",
            "actions": [
                {
                    "name": "MoveForward",
                    "type": "Button",
                    "id": "1841725c-6def-4119-aca0-a05adebecb94",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.001,pressPoint=0.001)"
                },
                {
                    "name": "Rotate",
                    "type": "Value",
                    "id": "38aff5fa-7ed6-4a04-9a7a-a0a21f32fb5c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "StandartAttack",
                    "type": "Button",
                    "id": "fdbc991b-b074-45f9-90ec-7915b6eaf162",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SecondaryAttack",
                    "type": "Button",
                    "id": "1ca411de-c2e2-4cdd-9b0a-456e2d89bf06",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1c28f7a9-6283-4fc2-bbca-36f8c79d2113",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "ffef0580-7af5-4210-9bc9-8e6529c67ae3",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "1b95fb0b-d63d-4a40-8118-99c846eeb56e",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "d54d5758-3151-4a28-8250-07fda114ba4f",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "e39c90a2-8c69-431c-b611-d1614c016439",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StandartAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ce0a83d5-4bee-43a2-9513-5f2a0d4962cd",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}